module(
    name = "ecsact_lang_json",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "nlohmann_json", version = "3.11.2")
bazel_dep(name = "ecsact_runtime", version = "0.5.4")
bazel_dep(name = "ecsact_parse", version = "0.3.3")
bazel_dep(name = "magic_enum", version = "0.9.3")
bazel_dep(name = "ecsact_lang_cpp", version = "0.3.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "ecsact_codegen", version = "0.1.3")
