module(
    name = "ecsact_lang_json",
    version = "0.1.5",
    compatibility_level = 1,
)

bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "ecsact_runtime", version = "0.7.0")
bazel_dep(name = "ecsact_parse", version = "0.5.4")
bazel_dep(name = "magic_enum", version = "0.9.3")
bazel_dep(name = "ecsact_lang_cpp", version = "0.4.10")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "ecsact_codegen", version = "0.4.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "ecsact_cli", version = "0.3.19")

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)
