workspace(name = "ecsact_lang_json")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

_NLOHMANN_JSON_BUILD_FILE = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "json",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/**/*.hpp"]),
    strip_include_prefix = "include",
)
"""

http_archive(
    name = "nlohmann_json",
    build_file_content = _NLOHMANN_JSON_BUILD_FILE,
    sha256 = "e5c7a9f49a16814be27e4ed0ee900ecd0092bfb7dbfca65b5a421b774dccaaed",
    url = "https://github.com/nlohmann/json/releases/download/v3.11.2/include.zip",
)

http_archive(
    name = "ecsact_runtime",
    sha256 = "3e3b188b5e44a84af3ac985ae69969ebcd213c1dfd5758dc2e3ee1d1adc13fe9",
    strip_prefix = "ecsact_runtime-c9df3b6a6e31c5e248fdc1cf4597321c9691f008",
    url = "https://github.com/ecsact-dev/ecsact_runtime/archive/c9df3b6a6e31c5e248fdc1cf4597321c9691f008.zip",
)

http_archive(
    name = "ecsact_parse",
    sha256 = "09d5b3a7ce6af9fe6252ee8379c02bf2f22457d24c2e88593f06b732f5b613dd",
    strip_prefix = "ecsact_parse-1a1fa84fa62145aab64bb821efc8a21989ba1324",
    url = "https://github.com/ecsact-dev/ecsact_parse/archive/1a1fa84fa62145aab64bb821efc8a21989ba1324.zip",
)

http_archive(
    name = "com_google_googletest",
    sha256 = "80cf4c7bd0b0dd3da749005999473667c2272c8bbeeb11e6632a662fcf3e3ed6",
    strip_prefix = "googletest-3026483ae575e2de942db5e760cf95e973308dd5",
    url = "https://github.com/google/googletest/archive/3026483ae575e2de942db5e760cf95e973308dd5.zip",
)

http_archive(
    name = "magic_enum",
    sha256 = "6b948d1680f02542d651fc82154a9e136b341ce55c5bf300736b157e23f9df11",
    strip_prefix = "magic_enum-0.8.1",
    urls = ["https://github.com/Neargye/magic_enum/archive/refs/tags/v0.8.1.tar.gz"],
)

http_archive(
    name = "boost",
    sha256 = "4a79c389add7e3d54d0e12c83098d471d24536ba2d6b8593d3a95f151f25eebb",
    strip_prefix = "boost-da62319c330d81ef032517cbe13b6f35d97387cb",
    urls = ["https://github.com/bazelboost/boost/archive/da62319c330d81ef032517cbe13b6f35d97387cb.zip"],
)

load("@boost//:index.bzl", "boost_http_archives")

boost_http_archives()

http_archive(
    name = "hedron_compile_commands",
    sha256 = "ed5aea1dc87856aa2029cb6940a51511557c5cac3dbbcb05a4abd989862c36b4",
    strip_prefix = "bazel-compile-commands-extractor-e16062717d9b098c3c2ac95717d2b3e661c50608",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/e16062717d9b098c3c2ac95717d2b3e661c50608.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

http_archive(
    name = "com_grail_bazel_toolchain",
    sha256 = "aae35819d7fad92047f7ffcc3e7d0c360b6f35b893ff51f74b21f13434528d2c",
    strip_prefix = "bazel-toolchain-42fa12b88d85404d29434c43a3a0400c1221a70e",
    url = "https://github.com/grailbio/bazel-toolchain/archive/42fa12b88d85404d29434c43a3a0400c1221a70e.zip",
)

load("@com_grail_bazel_toolchain//toolchain:deps.bzl", "bazel_toolchain_dependencies")

bazel_toolchain_dependencies()

load("@com_grail_bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain")

llvm_toolchain(
    name = "llvm_toolchain",
    cxx_standard = {"linux": "c++20"},
    distribution = "clang+llvm-15.0.6-x86_64-linux-gnu-ubuntu-18.04.tar.xz",
    llvm_version = "15.0.6",
)

load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")

llvm_register_toolchains()
